--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Git Quiz</h1>
+   <h4>What is Git and why is it so important?</h4> 
+   <h4> What's a branch and why do we create them?</h4> 
+   <h4>What's the working tree?</h4> 
+   <h4>What's the staging area?</h4> 
+   <h4>What's the command to retrieve the latest version of your files from the remote serve?</h4> 
+ 
 </body>
 </html>
